apps/site/k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: 1router
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: site
