apps/site/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 1router-frontend
  namespace: 1router
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: 1router-frontend
